--- a/index.html
+++ b/index.html
@@ -609,21 +609,21 @@ function scrubHiddenRoadsBlue() {
       const attrStroke = (p.getAttribute('stroke') || '').toLowerCase();
       const compStroke = (cs.stroke || '').toLowerCase();
 
-      if (isBlue(cs.stroke) || attrStroke === '#00ccff' || attrStroke === '#3388ff') {
-        // ✅ Instead of hiding it, force our solved look on the base path
-        p.style.display = '';                // make sure it's visible
-        p.style.stroke = '#23c35b';          // soft green
-        p.style.strokeOpacity = '0.6';
-        p.style.strokeWidth = '6px';
-        p.style.fill = 'none';
-        p.style.pointerEvents = 'none';      // keep it unclickable
-        p.classList.remove('leaflet-interactive');
+     if (isBlue(cs.stroke) || attrStroke === '#00ccff' || attrStroke === '#3388ff') {
+  // tag as solved and let CSS impose the unified look
+  p.setAttribute('data-correct', '1');
 
-        // clean up any conflicting attributes
-        p.removeAttribute('stroke');
-        p.removeAttribute('stroke-opacity');
-        p.removeAttribute('stroke-width');
-      }
+  // remove any conflicting inline styling so CSS wins
+  p.style.display = '';           // keep visible
+  p.style.stroke = '';            // clear inline
+  p.style.strokeOpacity = '';
+  p.style.strokeWidth = '';
+  p.style.fill = '';
+  p.removeAttribute('stroke');
+  p.removeAttribute('stroke-opacity');
+  p.removeAttribute('stroke-width');
+  p.classList.remove('leaflet-interactive');
+}
     });
   } catch {}
 }
