--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 }
 /* === Unified "Correct" road style (matches the thicker purple one) === */
 :root{
-  --correct-green: #23c35b;   /* tweak here if you want a different green */
+  --correct-green: #128230;   /* tweak here if you want a different green */
   --correct-opacity: 0.85;    /* a bit darker than before */
   --correct-width: 8px;       /* thicker stroke to match purple */
 }
