--- a/index.html
+++ b/index.html
@@ -404,6 +404,8 @@
   let townshipLayerRef;      // MT L.GeoJSON
   let roadsBufferGroup = L.layerGroup(); // holds 20px invisible buffers
   let countyMaskFeature = null; // a prebuilt mask (outer rect with Lanc as hole)
+  let townshipEntering = false; // prevents double-fire on mobile
+
 
 
 
