--- a/index.html
+++ b/index.html
@@ -1110,126 +1110,98 @@ if (countyMaskFeature) {
                     fillOpacity: 0.25
                   },
                   onEachFeature: (feature, mtLayer) => {
-                    mtLayer.on('mouseover', function () {
-  if (insideManheim) return;
-
-  const tooltip = document.getElementById('custom-tooltip');
-  const center = mtLayer.getBounds().getCenter();
-  const screenPoint = map.latLngToContainerPoint(center);
-
-  tooltip.innerText = "Manheim Township";
-  tooltip.style.left = screenPoint.x + 'px';
-  tooltip.style.top = screenPoint.y + 'px';
-  tooltip.style.display = 'block';
-});
-
-mtLayer.on('mouseout', function () {
-  const tooltip = document.getElementById('custom-tooltip');
-  tooltip.style.display = 'none';
-  tooltip.innerText = '';
-});
-mtLayer.on('mouseover', function () {
-  if (insideManheim) return; // already clicked
-
-  // 🧹 Remove old hover overlay if any
-  if (hoverOverlay) {
-    map.removeLayer(hoverOverlay);
-    hoverOverlay = null;
-  }
-
-  // 🟡 Add gold semi-transparent hover overlay
-  hoverOverlay = L.geoJSON(mtLayer.feature, {
-    pane: 'hoverPane', // we'll define this pane in step 3
-    style: {
-      fillColor: '#ffd700',
-      fillOpacity: 0.3,
-      color: 'black',
-      weight: 1,
-      opacity: 1
-    }
-  }).addTo(map);
-
-  // 🔒 Make hover overlay ignore pointer events
-  hoverOverlay.eachLayer(l => {
-    const el = l.getElement();
-    if (el) el.style.pointerEvents = 'none';
-  });
-});
-mtLayer.on('mouseout', function () {
-  if (hoverOverlay) {
-    map.removeLayer(hoverOverlay);
-    hoverOverlay = null;
-  }
-});
-
-
-
-
-                   // single-tap enter (works on mobile & desktop)
-const enterTownship = (e) => {
-  if (townshipEntering || insideManheim) { if (e) L.DomEvent.stop(e); return; }
-  townshipEntering = true;
-
-  // we’re going in
-  insideManheim     = true;
-  insideLancaster   = true;     // still inside county
-  currentLayerDepth = 3;
-  updateBackButtonVisibility();
-
-  // remove hover overlay if present so it can’t intercept clicks
-  try {
-    if (typeof hoverOverlay !== 'undefined' && hoverOverlay) { map.removeLayer(hoverOverlay); hoverOverlay = null; }
-  } catch {}
-
-  // stop this polygon from eating clicks over the roads
-  try { mtLayer.closeTooltip?.(); mtLayer.unbindTooltip?.(); } catch {}
-  mtLayer.setStyle({ fillOpacity: 0 }); // fade fill so roads are fully visible
-  const mtPath = mtLayer._path || mtLayer.getElement?.();
-  if (mtPath) { mtPath.style.pointerEvents = 'none'; mtPath.style.outline = 'none'; }
-
-  // add roads AFTER the zoom finishes so no second tap needed
-  const target = mtLayer.getBounds();
-  map.once('moveend', () => {
-    try { if (!map.hasLayer(roadsLayerGroup))  map.addLayer(roadsLayerGroup); } catch {}
-    try { if (!map.hasLayer(roadsBufferGroup)) map.addLayer(roadsBufferGroup); } catch {}
-    try { scrubHiddenRoadsBlue?.(); } catch {}   // keep solved roads from flashing blue
-    townshipEntering = false;
+  // --- Tooltip in center while outside township ---
+  mtLayer.on('mouseover', function () {
+    if (insideManheim) return;
+    const tt = document.getElementById('custom-tooltip');
+    if (!tt) return;
+    const center = mtLayer.getBounds().getCenter();
+    const screen = map.latLngToContainerPoint(center);
+    tt.innerText = 'Manheim Township';
+    tt.style.left = screen.x + 'px';
+    tt.style.top  = screen.y + 'px';
+    tt.style.display = 'block';
   });
 
-  map.fitBounds(target, { padding: [36, 36], maxZoom: 14 });
+  mtLayer.on('mouseout', function () {
+    const tt = document.getElementById('custom-tooltip');
+    if (tt) { tt.style.display = 'none'; tt.innerText = ''; }
+  });
 
-  if (e) L.DomEvent.stop(e);
-};
+  // --- Gold hover overlay (non-interactive) ---
+  mtLayer.on('mouseover', function () {
+    if (insideManheim) return; // already inside, no hover overlay
+    if (hoverOverlay) { try { map.removeLayer(hoverOverlay); } catch {} hoverOverlay = null; }
 
-// prefer touchstart on phones (plus guarded click to catch synthetic events)
-const IS_COARSE = window.matchMedia?.('(pointer: coarse)').matches ?? false;
-if (IS_COARSE) {
-  mtLayer.on('touchstart', enterTownship);
-  mtLayer.on('click', enterTownship); // guard prevents double run
-} else {
-  mtLayer.on('click', enterTownship);
-}
+    // ensure hover pane exists
+    if (!map.getPane('hoverPane')) map.createPane('hoverPane');
+    map.getPane('hoverPane').style.zIndex = 350;
 
+    hoverOverlay = L.geoJSON(mtLayer.feature, {
+      pane: 'hoverPane',
+      style: {
+        fillColor: '#ffd700',
+        fillOpacity: 0.30,
+        color: 'black',
+        weight: 1,
+        opacity: 1
+      }
+    }).addTo(map);
 
-  const mtPath = mtLayer._path;
-  if (mtPath) {
-    mtPath.style.pointerEvents = 'none';
-    mtPath.style.outline = 'none';
+    try {
+      hoverOverlay.eachLayer(l => {
+        const el = l.getElement?.();
+        if (el) el.style.pointerEvents = 'none';
+      });
+    } catch {}
+  });
+
+  mtLayer.on('mouseout', function () {
+    if (hoverOverlay) { try { map.removeLayer(hoverOverlay); } catch {} hoverOverlay = null; }
+  });
+
+  // --- Mobile-friendly single-tap enter (wait for zoom, then add roads) ---
+  const enterTownship = (e) => {
+    if (townshipEntering || insideManheim) { if (e) L.DomEvent.stop(e); return; }
+    townshipEntering = true;
+
+    insideManheim     = true;   // we are now inside MT
+    insideLancaster   = true;   // still inside county
+    currentLayerDepth = 3;
+    updateBackButtonVisibility();
+
+    // clear hover UI so it doesn't intercept
+    if (hoverOverlay) { try { map.removeLayer(hoverOverlay); } catch {} hoverOverlay = null; }
+    const tt = document.getElementById('custom-tooltip');
+    if (tt) { tt.style.display = 'none'; tt.innerText = ''; }
+
+    // disable MT polygon interactivity and fade its fill
+    mtLayer.setStyle({ fillOpacity: 0 });
+    const mtPath = mtLayer._path || mtLayer.getElement?.();
+    if (mtPath) { mtPath.style.pointerEvents = 'none'; mtPath.style.outline = 'none'; }
+
+    // after the zoom finishes, add roads so they're clickable immediately
+    const target = mtLayer.getBounds();
+    map.once('moveend', () => {
+      try { if (roadsLayerGroup  && !map.hasLayer(roadsLayerGroup))  map.addLayer(roadsLayerGroup); } catch {}
+      try { if (roadsBufferGroup && !map.hasLayer(roadsBufferGroup)) map.addLayer(roadsBufferGroup); } catch {}
+      try { if (typeof scrubHiddenRoadsBlue === 'function') scrubHiddenRoadsBlue(); } catch {}
+      townshipEntering = false;
+    });
+
+    map.fitBounds(target, { padding: [36, 36], maxZoom: 14 });
+    if (e) L.DomEvent.stop(e);
+  };
+
+  const IS_COARSE = window.matchMedia?.('(pointer: coarse)').matches ?? false;
+  if (IS_COARSE) {
+    mtLayer.on('touchstart', enterTownship);
+    mtLayer.on('click', enterTownship); // guarded by townshipEntering
+  } else {
+    mtLayer.on('click', enterTownship);
   }
+},
 
-  // 🧱 Create mask that reveals only MT
-if (worldMask) {
-  map.removeLayer(worldMask);
-  worldMask = null;
-}
-
-worldMask = L.geoJSON(createWorldMask(feature), {
-  style: {
-    fillColor: '#cccccc',
-    fillOpacity: 0.7,
-    stroke: false,
-    pane: 'maskPane'
-  }
 }).addTo(map);
 
 worldMask.eachLayer(layer => {
