--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,6 @@ if (countyMaskFeature) {
     if (insideManheim) return; // already inside, no hover overlay
     if (hoverOverlay) { try { map.removeLayer(hoverOverlay); } catch {} hoverOverlay = null; }
 
-    // ensure hover pane exists
     if (!map.getPane('hoverPane')) map.createPane('hoverPane');
     map.getPane('hoverPane').style.zIndex = 350;
 
@@ -1165,7 +1164,7 @@ if (countyMaskFeature) {
     if (townshipEntering || insideManheim) { if (e) L.DomEvent.stop(e); return; }
     townshipEntering = true;
 
-    insideManheim     = true;   // we are now inside MT
+    insideManheim     = true;   // now inside MT
     insideLancaster   = true;   // still inside county
     currentLayerDepth = 3;
     updateBackButtonVisibility();
@@ -1180,7 +1179,7 @@ if (countyMaskFeature) {
     const mtPath = mtLayer._path || mtLayer.getElement?.();
     if (mtPath) { mtPath.style.pointerEvents = 'none'; mtPath.style.outline = 'none'; }
 
-    // after the zoom finishes, add roads so they're clickable immediately
+    // after zoom finishes, add roads so they're clickable immediately
     const target = mtLayer.getBounds();
     map.once('moveend', () => {
       try { if (roadsLayerGroup  && !map.hasLayer(roadsLayerGroup))  map.addLayer(roadsLayerGroup); } catch {}
@@ -1196,80 +1195,12 @@ if (countyMaskFeature) {
   const IS_COARSE = window.matchMedia?.('(pointer: coarse)').matches ?? false;
   if (IS_COARSE) {
     mtLayer.on('touchstart', enterTownship);
-    mtLayer.on('click', enterTownship); // guarded by townshipEntering
+    mtLayer.on('click', enterTownship); // guard prevents double-run
   } else {
     mtLayer.on('click', enterTownship);
   }
-},
-
-}).addTo(map);
-
-worldMask.eachLayer(layer => {
-  const el = layer.getElement();
-  if (el) el.style.pointerEvents = 'none';
-});
-
-
-  // optional safety: clear any lingering active name
-try { activeRoadName = ''; } catch {}
-
-// ✅ Show roads after MT is clicked
-armSolvedSegmentsForReentry();     // <-- prep solved segments before re-adding
-map.addLayer(roadsLayerGroup);
-map.addLayer(roadsBufferGroup);
-// Remove any lingering cyan/blue base strokes on solved segments
-scrubHiddenRoadsBlue();
-
-// Hard-reset base road strokes on re-entry so solved roads don't show blue
-try {
-  roadsLayerGroup.eachLayer(l => {
-    const st = segmentStateMap.get(String(l.feature.id));
-    const el = l.getElement?.();
-
-    if (st?.correct || st?.used_hint) {
-      // Hide base stroke completely for solved segments
-      l.setStyle({ color: 'transparent', opacity: 0, weight: 0 });
-      l.options.interactive = false;
-
-      if (el) {
-        el.style.display = 'none';                      // prevents any flash
-        el.style.stroke = 'none';
-        el.removeAttribute('stroke');
-        el.removeAttribute('stroke-opacity');
-        el.removeAttribute('stroke-width');
-        el.classList.remove('leaflet-interactive','correct-final','active-highlight','hover-green');
-      }
-      l._originalColor = 'greenish'; // keep your internal marker consistent
-    } else {
-      // Ensure unsolved segments are reset off any accidental blue
-      const base = l._originalColor || 'black';
-      l.setStyle({ color: base, weight: 6, opacity: 1, lineCap: 'round', pane: 'hiddenRoads' });
-      l.options.interactive = true;
-
-      if (el) {
-        el.style.display = '';
-        el.style.stroke = '';
-        el.removeAttribute('stroke');
-        el.classList.add('leaflet-interactive');
-      }
-    }
-  });
-} catch {}
-
-
-  // normalize overlays so they never appear blue
-normalizeCorrectOverlays();
-
-});
-
-                  }
-                }).addTo(map);
-              });
-          }, 500);
-        });
-            }
-    });
-    countyLayerRef = countyLayer.addTo(map);
+},  // ← this closes onEachFeature
+}).addTo(map);  // ← this closes the L.geoJSON(mtData, ...).addTo(map)
 
 
     function createWorldMask(feature) {
