--- a/index.html
+++ b/index.html
@@ -1159,106 +1159,49 @@ mtLayer.on('mouseout', function () {
     hoverOverlay = null;
   }
 });
+mtLayer.on('click', (e) => {
+  if (insideManheim) { if (e) L.DomEvent.stop(e); return; }
 
-
-
-
-                    mtLayer.on('click', () => {
-  map.fitBounds(mtLayer.getBounds(), { maxZoom: 15 });
   console.log("📍 Manheim Township clicked");
-                      currentLayerDepth = 3;
-updateBackButtonVisibility();
-insideManheim = true;
+  currentLayerDepth = 3;
+  updateBackButtonVisibility();
+  insideManheim = true;     // still inside county
 
-                      mtLayer.unbindTooltip();
+  // stop tooltip + keep polygon from eating taps
+  try { mtLayer.unbindTooltip(); } catch {}
+  mtLayer.setStyle({ fillOpacity: 0, weight: 1.5, color: 'black', opacity: 1 });
+  const mtPath = mtLayer._path || mtLayer.getElement?.();
+  if (mtPath) { mtPath.style.pointerEvents = 'none'; mtPath.style.outline = 'none'; }
 
-
-  // 🔒 Disable interaction and fade MT polygon
-  mtLayer.setStyle({
-    fillOpacity: 0,
-    weight: 1.5,
-    color: 'black',
-    opacity: 1
-  });
-
-  const mtPath = mtLayer._path;
-  if (mtPath) {
-    mtPath.style.pointerEvents = 'none';
-    mtPath.style.outline = 'none';
-  }
-
-  // 🧱 Create mask that reveals only MT
-if (worldMask) {
-  map.removeLayer(worldMask);
-  worldMask = null;
-}
-
-worldMask = L.geoJSON(createWorldMask(feature), {
-  style: {
-    fillColor: '#cccccc',
-    fillOpacity: 0.7,
-    stroke: false,
-    pane: 'maskPane'
-  }
-}).addTo(map);
-
-worldMask.eachLayer(layer => {
-  const el = layer.getElement();
-  if (el) el.style.pointerEvents = 'none';
-});
-
+  // 🧱 Create mask that reveals only MT (unchanged)
+  try {
+    if (worldMask) { map.removeLayer(worldMask); worldMask = null; }
+    worldMask = L.geoJSON(createWorldMask(feature), {
+      style: { fillColor: '#cccccc', fillOpacity: 0.7, stroke: false, pane: 'maskPane' }
+    }).addTo(map);
+    worldMask.eachLayer(layer => { const el = layer.getElement?.(); if (el) el.style.pointerEvents = 'none'; });
+  } catch {}
 
   // optional safety: clear any lingering active name
-try { activeRoadName = ''; } catch {}
+  try { activeRoadName = ''; } catch {}
 
-// ✅ Show roads after MT is clicked
-armSolvedSegmentsForReentry();     // <-- prep solved segments before re-adding
-map.addLayer(roadsLayerGroup);
-map.addLayer(roadsBufferGroup);
-// Remove any lingering cyan/blue base strokes on solved segments
-scrubHiddenRoadsBlue();
+  // 🚀 Add roads only AFTER the zoom completes (single-tap fix on mobile)
+  const target = mtLayer.getBounds();
+  map.once('moveend', () => {
+    try { if (!map.hasLayer(roadsLayerGroup))  map.addLayer(roadsLayerGroup); } catch {}
+    try { if (!map.hasLayer(roadsBufferGroup)) map.addLayer(roadsBufferGroup); } catch {}
 
-// Hard-reset base road strokes on re-entry so solved roads don't show blue
-try {
-  roadsLayerGroup.eachLayer(l => {
-    const st = segmentStateMap.get(String(l.feature.id));
-    const el = l.getElement?.();
-
-    if (st?.correct || st?.used_hint) {
-      // Hide base stroke completely for solved segments
-      l.setStyle({ color: 'transparent', opacity: 0, weight: 0 });
-      l.options.interactive = false;
-
-      if (el) {
-        el.style.display = 'none';                      // prevents any flash
-        el.style.stroke = 'none';
-        el.removeAttribute('stroke');
-        el.removeAttribute('stroke-opacity');
-        el.removeAttribute('stroke-width');
-        el.classList.remove('leaflet-interactive','correct-final','active-highlight','hover-green');
-      }
-      l._originalColor = 'greenish'; // keep your internal marker consistent
-    } else {
-      // Ensure unsolved segments are reset off any accidental blue
-      const base = l._originalColor || 'black';
-      l.setStyle({ color: base, weight: 6, opacity: 1, lineCap: 'round', pane: 'hiddenRoads' });
-      l.options.interactive = true;
-
-      if (el) {
-        el.style.display = '';
-        el.style.stroke = '';
-        el.removeAttribute('stroke');
-        el.classList.add('leaflet-interactive');
-      }
-    }
+    // now that roads are in, normalize styling
+    try { armSolvedSegmentsForReentry?.(); } catch {}
+    try { scrubHiddenRoadsBlue?.(); } catch {}
+    try { normalizeCorrectOverlays?.(); } catch {}
   });
-} catch {}
 
+  map.fitBounds(target, { padding: [36, 36], maxZoom: 15 });
 
-  // normalize overlays so they never appear blue
-normalizeCorrectOverlays();
-
+  if (e) L.DomEvent.stop(e);
 });
+
 
                   }
                 }).addTo(map);
