--- a/index.html
+++ b/index.html
@@ -1203,17 +1203,20 @@ mtLayer.on('click', function (e) {
 
   // clear any lingering active road name
   try { activeRoadName = ''; } catch (err) {}
+// 🚀 Smooth in with a computed zoom (mobile gets a tighter bias)
+var IS_COARSE = (window.matchMedia && window.matchMedia('(pointer: coarse)').matches) ? true : false;
+var pad    = IS_COARSE ? L.point(8, 20) : L.point(30, 30);  // keep your current values
+var bounds = mtLayer.getBounds();
+var baseZ  = map.getBoundsZoom(bounds, true, pad);
+var capZ   = (map.getMaxZoom && map.getMaxZoom()) || 20;
 
-  // 🚀 Smooth in with bounds + padding (desktop vs mobile)
- var IS_COARSE = (window.matchMedia && window.matchMedia('(pointer: coarse)').matches) ? true : false;
-var pad = IS_COARSE ? L.point(8, 20) : L.point(30, 30);   // keep your current values
+// +1 zoom only on mobile (try +2 if still a bit loose)
+var finalZ = Math.min(baseZ + (IS_COARSE ? 1 : 0), capZ);
 
-map.flyToBounds(mtLayer.getBounds(), {
-  paddingTopLeft: pad,
-  paddingBottomRight: pad,
-  maxZoom: IS_COARSE ? 18 : 18,   // ↑ mobile only (try 16, then 17 if needed)
+// animate to center/zoom (no maxZoom here—finalZ already respects cap)
+map.flyTo(bounds.getCenter(), finalZ, {
   animate: true,
-  duration: 1.0,
+  duration: 1.0,     // bump to 1.2 for slower
   easeLinearity: 0.2
 });
 
@@ -1226,16 +1229,6 @@ map.flyToBounds(mtLayer.getBounds(), {
     try { if (typeof armSolvedSegmentsForReentry === 'function') armSolvedSegmentsForReentry(); } catch (err) {}
     try { if (typeof scrubHiddenRoadsBlue === 'function') scrubHiddenRoadsBlue(); } catch (err) {}
     try { if (typeof normalizeCorrectOverlays === 'function') normalizeCorrectOverlays(); } catch (err) {}
-  });
-
-  // Smooth, slightly less tight than before
-  map.flyToBounds(bounds, {
-    paddingTopLeft: pad,
-    paddingBottomRight: pad,
-    maxZoom: 15,
-    animate: true,
-    duration: 1.0,       // bump to 1.2 if you want slower
-    easeLinearity: 0.2
   });
 
   if (e) L.DomEvent.stop(e);
