--- a/index.html
+++ b/index.html
@@ -1110,7 +1110,7 @@ if (countyMaskFeature) {
                   style: {
                     color: 'black',
                     weight: 1.5,
-                    fillColor: '#ff8800',
+                    fillColor: '#e3f2fd',
                     fillOpacity: 0.25
                   },
                   onEachFeature: (feature, mtLayer) => {
