--- a/index.html
+++ b/index.html
@@ -1147,8 +1147,8 @@ mtLayer.on('mouseover', function () {
   style: {
     fillColor: '#ffd700',
     fillOpacity: 0.30,
-    color: '#ffd700',   // ← was 'black'
-    weight: 2,          // ← was 1
+    color: 'black',   // ← was 'black'
+    weight: 1,          // ← was 1
     opacity: 1
   }
 }).addTo(map);
