--- a/index.html
+++ b/index.html
@@ -269,6 +269,13 @@
   fill: none !important;
   pointer-events: none !important;
 }
+/* Blur ONLY the basemap tiles while moving/loading */
+.leaflet-tile-pane.blurred {
+  filter: blur(1.4px) brightness(1.03) saturate(0.9);
+  transition: filter 120ms ease;
+  transform: translateZ(0); /* GPU hint */
+  will-change: filter;
+}
 
 
 
